cluster/apps/blog/app/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blog
  namespace: blog
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`blog.${domain_name}`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: blog
          namespace: blog
          port: 80
          #unauthenticated access, public blog
  tls: {}
