cluster/apps/blog/app/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: blog
  namespace: blog
spec:
  hosts:
  - blog.${domain_name}
  gateways:
  - istio-ingress/istio-ingressgateway
  http:
  - route:
    - destination:
        host: blog.blog.svc.cluster.local
        port:
          number: 80
    match:
    - authority:
        exact: blog.${domain_name}
      uri:
        prefix: /
